[ChaosMonkey] Ajout d'une fonctione et d'une route pour faire crasher l'appli
