# backend-server/model/model.go
@@ -6,3 +6,8 @@ type Status struct {
 	Designation string `json:"designation"`
 	State       string `json:"state"`
 }
+
+// CrashResponse représente la réponse JSON envoyée lors de l'appel à la route /crash.
+type CrashResponse struct {
+	Message string `json:"message"`
+}
